src/pages/Homepage.css
.homepage-wrapper {
  overflow-x: hidden;
}

.homepage-banner {
  /* position: fixed; */
  max-width: 100%;
  height: 400px;
  left: 0px;
  background-position: center;
  background: url("../images/banner1.png");
  background-repeat: no-repeat;
  background-size: cover;
}
.homepage-banner-btn {
  position: absolute;
  width: 198px;
  height: 36px;
  left: 179px;
  top: 420px;
  z-index: 2;
  background: #006161;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 20px;
  color: white;
  font-family: "Montserrat", sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 16px;
  line-height: 20px;
  cursor: pointer;
}

.topsell-heading {
  font-family: "Montserrat";
  font-weight: 800;
  font-size: 40px;
  line-height: 49px;
  margin: 50px;
  color: #000000;
}
.topsell-item-wrapper {
  display: flex;
  flex: row;
  flex-wrap: wrap;
  margin: 10px 40px;
  justify-content: space-between;
}
.topsell-item {
  margin: 10px;
  cursor: pointer;
}
.topsell-item-image {
  width: 390px;
  /* height: 480px; */
  /* background: url("https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dCUyMHNoaXJ0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"); */
  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 30px;
  /* margin: 10px; */
}

.topsell-item-text {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  margin-top: 29px;
  color: black;
}
.collection-heading {
  font-family: "Montserrat";
  font-weight: 800;
  font-size: 40px;
  line-height: 49px;
  margin: 50px;
  color: #000000;
}
.collection-item-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0px 40px;
  justify-content: center;
}
.collection-item {
  margin: 10px;
  cursor: pointer;
  display: flex;
}
.collection-item-image {
  width: 390px;
  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 30px;
}

.collection-item-text {
  font-family: "Montserrat";
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  margin-top: 29px;
  color: black;
}
@media only screen and (max-width: 340px) {
  .data-banner-container {
    height: 360px !important;
    padding-left: 2rem !important;
  }
  .data-banner {
    background-size: cover !important;
    margin-right: 3rem !important;
    height: 300px !important;
  }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 450px) {
  /* .collection-item-image {
    width: 180px !important;
  } */
  .topsell-item-image {
    width: 180px !important;
  }
  .topsell-item-text {
    width: 180px;
    font-size: 20px;
  }
  .homepage-banner {
    /* height: 300px; */
    background: url("../images/banner-tab.png");
    background-size: cover;
  }
  .homepage-banner-btn {
    left: 30px;
    top: 380px;
    position: absolute;
    width: 198px;
    height: 36px;
  }
  /* .collection-wrapper{
    display: flex;
    flex-direction: column;
  } */
  .data-banner-container {
    width: 255px !important;
    padding-left: 1rem !important;
  }
  .data-banner {
    background-size: cover !important;
    /* margin: 0 !important; */
  }
  .collection-item-wrapper {
    justify-content: center !important;
  }
}
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .collection-item-wrapper,
  .topsell-item-wrapper {
    justify-content: center;
    display: flex;
    flex-direction: column;
  }
  .collection-heading,
  .topsell-heading {
    font-size: 27px;
  }
  .homepage-banner-btn {
    font-size: 10px !important;
    position: absolute;
    width: 150px !important;
    height: 36px;
    left: 4px !important;
    top: 360px !important;
  }
  .homepage-banner {
    /* height: 300px; */
    background: url("../images/banner-mob.png");
  }
  .collection-wrapper {
    display: flex;
    flex-direction: column;
  }
  .collection-item-text {
    max-width: 200px;
    display: flex;
    flex-wrap: wrap;
    font-size: 20px;
  }
  .collection-item-wrapper {
    justify-content: center;
  }
  .quality-wrapper {
    flex-direction: column;
  }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (max-width: 1024px) {
  .homepage-wrapper {
    overflow-x: hidden;
  }
  .homepage-banner-btn {
    position: absolute;
    width: 198px;
    height: 36px;
    left: 30px;
    top: 420px;
    z-index: 2;
    background: #006161;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    color: white;
    font-family: "Montserrat", sans-serif;
    font-style: normal;
    font-weight: 200;
    font-size: 16px;
    line-height: 20px;
    cursor: pointer;
  }
  .homepage-banner {
    background: url("../images/banner-tab.png");
    background-size: cover;
  }
  .collection-item-image {
    width: 280px;
  }
  .topsell-item-image {
    width: 280px;
  }
  .collection-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .collection-item-wrapper {
    justify-content: center;
    overflow-x: hidden !important;
  }
}

